# agentic-orchestrator

./: .dockerignore  .env.docker  .env.example  .gitignore  .gitignore-README.md  DOCKER.md  Makefile  agentic-intents.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  readme.MD  start.sh  supervisord.conf
.cargo/: config.toml
.devcontainer/: README.md  devcontainer.json  setup.sh
cmd/agent-runner-py/: .env.example  .gitignore  Dockerfile  PATCH_WORKFLOW_GUIDE.md  RATE_LIMITING_PLAN.md  README.md  RUN_TESTS.md  TEST_PATCH_FLOW.md  config.yaml  main.py  pytest.ini  requirements.txt  resolver.py  start.sh  test_patch_flow.sh
cmd/aob-cli/: .gitignore  APPROVAL_COMMANDS.md  AUTH.md  BUILD.md  COMMANDS.md  Cargo.toml  Dockerfile  README.md  build.sh
cmd/aob-cli/src/: main.rs
cmd/aob-cli/src/auth/: mod.rs
cmd/aob-cli/src/client/: mod.rs
cmd/aob-cli/src/commands/: approve.rs  artifact.rs  cache.rs  logs.rs  mod.rs  patch.rs  replay.rs  run.rs  workflow.rs
cmd/aob-cli/src/utils/: mod.rs  spinner.rs
cmd/api/: start.sh
cmd/api-rust/: Cargo.toml  README.md  start.sh
cmd/api-rust/src/: config.rs  hitl.rs  main.rs  middleware.rs  proxy.rs  sse.rs
cmd/fanout/: Dockerfile  INTEGRATION_COMPLETE.md  SUMMARY.md  client.go  go.mod  hub.go  main.go  redis_subscriber.go  server.go  start.sh
cmd/hitl/: start.sh
cmd/hitl-worker/: Dockerfile  main.go  start.sh
cmd/http-worker/: Dockerfile  main.go  start.sh
cmd/orchestrator/: ARCHITECTURE.md  Dockerfile  README.md  main.go  start.sh
cmd/parser/: start.sh
cmd/router/: start.sh
cmd/runner/: main.go  start.sh
cmd/workflow-optimiser/: Cargo.toml  README.md
cmd/workflow-optimiser/src/: lib.rs  optimizer.rs  types.rs
cmd/workflow-optimiser/src/optimizers/: branch_absorber.rs  conditional_absorber.rs  dead_code_eliminator.rs  http_coalescer.rs  mod.rs  parallel_detector.rs  parallel_executor.rs  semantic_cache.rs
cmd/workflow-runner/: .gitignore  Dockerfile  TEST_GUIDE.md  e2e_agent_patch_test.go  e2e_true_agent_patch_test.go  integration_test.go  main.go  run_tests.sh  start.sh
common/bootstrap/: bootstrap.go  components.go  options.go
common/cache/: cache.go
common/clients/: cas.go  config.go  context.go  http.go  mover_client.go  orchestrator.go  redis_cas.go
common/compiler/: README.md  ir.go
common/config/: config.go
common/db/: db.go
common/logger/: logger.go
common/metrics/: system.go
common/middleware/: ratelimit_middleware.go
common/models/: patch_chain.go  tag_move.go  workflow.go
common/mover/: Cargo.toml  README.md
common/mover/src/: config.rs  iouring.rs  lib.rs  main.rs  protocol.rs
common/queue/: queue.go
common/ratelimit/: config.go  limiter.go  rate_limit.lua  workflow_inspector.go
common/redis/: client.go
common/repository/: artifact.go  cas_blob.go  run.go  run_patch.go  tag.go
common/schema/: README.md  api-responses.schema.json  workflow.schema.json
common/server/: server.go
common/telemetry/: telemetry.go
common/validation/: patch_validator.go
common/worker/: completion.go
crates/dag-optimizer/: .gitignore  Cargo.toml  README.md
crates/dag-optimizer/src/: lib.rs
dev_scripts/: README.md  dev.sh  migrate.sh  restart.sh  start.sh  status.sh  stop.sh  test_rate_limit.sh  test_run.sh
docker/: BUILD_GUIDE.md  DOCKER_BUILD.md  Dockerfile.go-service  OBSERVABILITY.md  QUICKSTART.md  START.md  docker-compose.yml  setup.sh  test-docker-services.sh  verify-docker.sh
docs/: AGENT_SERVICE.md  ARCHITECTURE_INTEGRATION.md  CHOREOGRAPHY_EXECUTION_DESIGN.md  COORDINATOR_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  NODE_REPLAY.md  RUN_HISTORY_IMPLEMENTATION.md  RUN_LIFECYCLE_ARCHITECTURE.md  SCHEMA_INTEGRATION.md  SERVICE_MANAGEMENT.md  VARIABLE_RESOLUTION.md
docs/schema/: COMPACTION_COLUMN_OPTIMIZATION.md  COMPACTION_LIFECYCLE.md  DESIGN.md  PARTITION_MANAGEMENT.md  PATCH_CHAIN_MEMBER_EXPLAINED.md  TAG_MOVE_EXPLAINED.md  TAG_NAMESPACING.md  UNDO_REDO_OPTIMIZATION.md  UUID_V7.md  WORKFLOW_LIFECYCLE.md
frontend/flow-builder/: .env.example  Dockerfile  ROUTER_SETUP.md  nginx.conf  package-lock.json  package.json  start.sh
migrations/: 001_final_schema.sql  002_add_compacted_from_id.sql  002_execution_schema.sql  002_separate_username_column.sql  003_add_tag_namespacing.sql  004_add_tag_prefix_index.sql  005_add_agent_results.sql  006_add_run_patches.sql  007_remove_run_patch_id.sql  008_add_node_id_to_run_patches.sql
perf_tests/: README.md  README_USAGE.md  run-perf-test.sh
perf_tests/mover/: cas_benchmark_test.go
scripts/: apply_delta.lua  install-systemd.sh  manage-partitions.sh  setup-codegen.sh  setup-db.sh  setup-linux.sh  setup-macos.sh  setup_redis.sh  start-all.sh  start-mover.sh  stop-all.sh  stop-mover.sh  stop_redis.sh  test-bare-metal.sh  verify-optimizations.sh
submission_doc/: COMPLETE.md  CONTENTS.md  FINAL_SUMMARY.md  README.md  SUBMISSION_SUMMARY.md
test_data/: workflow_examples.json
video_examples/: README.md  agent-node-demo.md  cli-approval-hitl.md  dynamic-rate-limiting.md  hitl-node-demo.md
(+204 files in other folders)
