[package]
name = "aob"
version = "0.1.0"
edition = "2021"
authors = ["Orchestrator Team"]
description = "Agentic Orchestration Builder CLI"
license = "MIT"

# Optimize for size and performance
[profile.release]
opt-level = "z"       # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
strip = true          # Strip symbols
panic = "abort"       # Smaller binary

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Async runtime (minimal features)
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "time", "signal"] }

# HTTP client (optimized)
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",  # Use rustls instead of openssl for smaller binary
    "stream",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal UI
colored = "2.1"
indicatif = "0.17"

# SSE streaming
eventsource-stream = "0.2"
futures = "0.3"

# Utilities
chrono = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }

# Shared workflow types
dag-optimizer = { path = "../../crates/dag-optimizer" }

[[bin]]
name = "aob"
path = "src/main.rs"
