[package]
name = "dag-optimizer"
version = "0.1.0"
edition = "2021"
authors = ["Orchestrator Team"]
description = "DAG optimization and analysis library"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# WASM bindings (optional, for browser usage)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
# Testing
serde_json = "1.0"

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[profile.release]
opt-level = "z"       # Optimize for size (good for WASM)
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
